# minesweeper-tiles

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-test.txt  requirements-web.txt  requirements.txt
.claude/: launch.json
.claude/hooks/: session-start.sh
.github/workflows/: bump-version.yml  ci.yml  deploy-pages.yml
data/: catalog.json  conformance.json  presets.json
data/ui/: screens.json
docs/plans/: typescript-rewrite-same-repo.md  typescript-rewrite.md
minesweeper/: __init__.py  __main__.py  boards.py  cli.py  game.py  gui.py
minesweeper/boards/: __init__.py  _data.py  aperiodic.py  catalog.py  core.py  presets.py  solids.py  surfaces.py  tilings.py
scripts/: export_conformance.py  export_data.py  make_favicon.py  make_next_icons.py  make_screenshots.py  make_web_icons.py
tests/: test_app.py  test_boards.py  test_cli.py  test_data_sync.py  test_game.py  test_gui.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/scripts/: check-bundle-size.mjs  make-icons.mjs
web/src/: game.ts  haptics.ts  main.ts  rng.ts  session.ts  testHook.ts
web/src/boards/: aperiodic.ts  catalog.ts  core.ts  presets.ts  solids.ts  surfaces.ts  tilings.ts
web/src/config/: screens.ts
web/src/input/: controls.ts  preventZoom.ts
web/src/render/: animations.ts  boardMesh.ts  demoBoard.ts  glyphAtlas.ts  polygonBoard.ts  renderer.ts  solidBoard.ts
web/src/ui/: hud.ts  menu.ts  styles.css
web/tests/e2e/: animations.spec.ts  app.spec.ts  clickable.spec.ts  gallery.spec.ts  play.spec.ts  smoke.spec.ts  solids.spec.ts  surfaces.spec.ts
web/tests/unit/: animations.test.ts  catalog.test.ts  conformance.test.ts  game.test.ts  haptics.test.ts  preventZoom.test.ts  screens.test.ts  solids.test.ts  surfaces.test.ts  visuals.test.ts
