[project]
name = "minesweeper"
version = "0.1.13"
description = "A minesweeper clone with square, triangle and hexagon boards"
requires-python = ">=3.13"
dependencies = ["pygame-ce>=2.5"]

[project.optional-dependencies]
web = ["pygbag>=0.9"]
test = ["pytest", "ruff"]
all = ["minesweeper[web]", "minesweeper[test]"]

[project.scripts]
minesweeper = "minesweeper.gui:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["minesweeper"]

[tool.setuptools.package-data]
minesweeper = ["assets/fonts/*.ttf", "assets/fonts/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
